[package]
name = "grorm-macros"
version = "0.1.0"
edition = "2021"
description = "Goroutine-native ORM for Rust with multi-database support"
authors = ["lijun <1489573464@qq.com>"]
license = "MIT"
repository = "https://github.com/WLmutou/grorm"
keywords = ["orm",  "postgresql", "mysql", "sqlite", "gorust"]
categories = ["database", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"